--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -18,21 +18,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext watermark\n",
-    "%watermark -a \"Caique Miranda\" -gu \"caiquemiranda\" -iv"
-   ]
+   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### End."
+    "### Fim."
    ]
   }
  ],
