--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Data Visualization with matplotlib"
+   ]
   },
   {
    "attachments": {},
