--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -27,7 +27,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "After discussing in the previous chapters Python libraries that were responsible for data\n",
+    "processing, now it is time for you to see a library that takes care of visualization. This\n",
+    "library is matplotlib.\n",
+    "\n",
+    "\n",
+    "Data visualization is often underestimated in data analysis, but it is actually a\n",
+    "very important factor because incorrect or inefficient data representation can ruin an\n",
+    "otherwise excellent analysis. In this chapter, you will discover the various aspects of the\n",
+    "matplotlib library, including how it is structured, and how to maximize the potential that\n",
+    "it offers."
+   ]
   },
   {
    "cell_type": "markdown",
