--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The matplotlib Library"
+   ]
   },
   {
    "cell_type": "markdown",
