--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -48,6 +48,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib is a Python library specializing in the development of two-dimensional\n",
+    "charts (including 3D charts). In recent years, it has been widespread in scientific and\n",
+    "engineering circles (http://matplolib.org)."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
