--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -53,7 +53,10 @@
    "source": [
     "matplotlib is a Python library specializing in the development of two-dimensional\n",
     "charts (including 3D charts). In recent years, it has been widespread in scientific and\n",
-    "engineering circles (http://matplolib.org)."
+    "engineering circles (http://matplolib.org).\n",
+    "\n",
+    "Among all the features that have made it the most used tool in the graphical\n",
+    "representation of data, there are a few that stand out:"
    ]
   },
   {
