--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -56,7 +56,13 @@
     "engineering circles (http://matplolib.org).\n",
     "\n",
     "Among all the features that have made it the most used tool in the graphical\n",
-    "representation of data, there are a few that stand out:"
+    "representation of data, there are a few that stand out:\n",
+    "\n",
+    "• Extreme simplicity in its use\n",
+    "• Gradual development and interactive data visualization\n",
+    "• Expressions and text in LaTeX\n",
+    "• Greater control over graphic elements\n",
+    "• Export to many formats, such as PNG, PDF, SVG, and EPS"
    ]
   },
   {
