--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -78,7 +78,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In addition to simplicity and deducibility, the matplotlib library inherited\n",
+    "interactivity from MATLAB as well. That is, the analyst can insert command after\n",
+    "command to control the gradual development of a graphical representation of data.\n",
+    "This mode is well suited to the more interactive approaches of Python as the IPython\n",
+    "QtConsole and IPython Notebook (see Chapter 2), thus providing an environment\n",
+    "for data analysis that has little to envy from other tools such as Mathematica, IDL, or\n",
+    "MATLAB."
+   ]
   },
   {
    "cell_type": "markdown",
