--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -106,7 +106,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In addition, you must not forget that matplotlib is not a separate application but\n",
+    "a library of a programming language like Python. So it also takes full advantage of the\n",
+    "potential that programming languages offer. matplotlib looks like a graphics library\n",
+    "that allows you to programmatically manage the graphic elements that make up a chart\n",
+    "so that the graphical display can be controlled in its entirety. The ability to program\n",
+    "the graphical representation allows management of the reproducibility of the data\n",
+    "representation across multiple environments and especially when you make changes or\n",
+    "when the data is updated."
+   ]
   },
   {
    "cell_type": "markdown",
