--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -120,7 +120,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Moreover, since matplotlib is a Python library, it allows you to exploit the full\n",
+    "potential of other libraries available to any developer that implements with this\n",
+    "language. In fact, with regard to data analysis, matplotlib normally cooperates with a set\n",
+    "of other libraries such as NumPy and pandas, but many other libraries can be integrated\n",
+    "without any problem."
+   ]
   },
   {
    "cell_type": "markdown",
