--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -131,7 +131,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Finally, graphical representations obtained through encoding with this library can be\n",
+    "exported in the most common graphic formats (such as PNG and SVG) and then be used\n",
+    "in other applications, documentation, web pages, etc."
+   ]
   },
   {
    "cell_type": "markdown",
