--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -140,7 +140,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The IPython and IPython QtConsole"
+   ]
   },
   {
    "cell_type": "markdown",
