--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -147,7 +147,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In order to get familiar with all the tools provided by the Python world, I chose to use\n",
+    "IPython both from a terminal and from the QtConsole. This is because IPython allows\n",
+    "you to exploit the interactivity of its enhanced terminal and, as you will see, IPython\n",
+    "QtConsole also allows you to integrate graphics directly inside the console."
+   ]
   },
   {
    "cell_type": "markdown",
