--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -157,7 +157,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To run an IPython session, simply run the following command:"
+   ]
   },
   {
    "cell_type": "markdown",
