--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -160,7 +160,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The architecture of matplotlib is logically structured into three layers, which are\n",
+    "placed at three different levels (see Figure 7-2). The communication is unidirectional,\n",
+    "that is, each layer can communicate with the underlying layer, while the lower layers\n",
+    "cannot communicate with the top ones."
+   ]
   },
   {
    "cell_type": "markdown",
