--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -170,7 +170,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Figure 7-2. The three layers of the matplotlib architecture\n",
+    "The three layers are as follows:\n",
+    "• Scripting\n",
+    "• Artist\n",
+    "• Backend"
+   ]
   },
   {
    "cell_type": "markdown",
