--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -188,7 +188,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In the diagram of the matplotlib architecture, the layer that works at the lowest level is\n",
+    "the Backend layer. This layer contains the matplotlib APIs, a set of classes that play the\n",
+    "role of implementation of the graphic elements at a low level.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
