--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -203,7 +203,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Artist Layer"
+   ]
   },
   {
    "cell_type": "markdown",
