--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -210,7 +210,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As an intermediate layer, we have a layer called Artist. All the elements that make up a\n",
+    "chart, such as the title, axis labels, markers, etc., are instances of the Artist object. Each of\n",
+    "these instances plays its role within a hierarchical structure (as shown in Figure 7-3)."
+   ]
   },
   {
    "cell_type": "markdown",
