--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -213,7 +213,17 @@
    "source": [
     "As an intermediate layer, we have a layer called Artist. All the elements that make up a\n",
     "chart, such as the title, axis labels, markers, etc., are instances of the Artist object. Each of\n",
-    "these instances plays its role within a hierarchical structure"
+    "these instances plays its role within a hierarchical structure\n",
+    "\n",
+    "There are two Artist classes: primitive and composite.\n",
+    "• The primitive artists are individual objects that constitute the basic\n",
+    "elements to form a graphical representation in a plot, for example a\n",
+    "Line2D, or as a geometric figure such as a Rectangle or Circle, or even\n",
+    "pieces of text.\n",
+    "• The composite artists are those graphic elements present in a chart\n",
+    "that are composed of several base elements, namely, the primitive\n",
+    "artists. Composite artists are for example the Axis, Ticks, Axes, and\n",
+    "Figures"
    ]
   },
   {
