--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -230,6 +230,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Generally, working at this level you will have to deal often with objects in higher\n",
+    "hierarchy as Figure, Axes, and Axis. So it is important to fully understand what these\n",
+    "objects are and what role they play within the graphical representation. Figure 7-4\n",
+    "shows the three main Artist objects (composite artists) that are generally used in all\n",
+    "implementations performed at this level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
