--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -241,7 +241,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "• Figure is the object with the highest level in the hierarchy. It\n",
+    "corresponds to the entire graphical representation and generally can\n",
+    "contain many Axes."
+   ]
   },
   {
    "cell_type": "markdown",
