--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -244,7 +244,17 @@
    "source": [
     "• Figure is the object with the highest level in the hierarchy. It\n",
     "corresponds to the entire graphical representation and generally can\n",
-    "contain many Axes."
+    "contain many Axes.\n",
+    "• Axes is generally what you mean as plot or chart. Each Axis object\n",
+    "belongs to only one Figure, and is characterized by two Artist Axis\n",
+    "(three in the three-dimensional case). Other objects, such as the title,\n",
+    "the x label, and the y label, belong to this composite artist.\n",
+    "• Axis objects that take into account the numerical values to be\n",
+    "represented on Axes, define the limits and manage the ticks (the\n",
+    "mark on the axes) and tick labels (the label text represented on each\n",
+    "tick). The position of the tick is adjusted by an object called a Locator\n",
+    "while the formatting tick label is regulated by an object called a\n",
+    "Formatter."
    ]
   },
   {
