--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -260,7 +260,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Scripting Layer (pyplot)"
+   ]
   },
   {
    "cell_type": "markdown",
