--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -267,7 +267,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Artist classes and their related functions (the matplotlib API) are particularly suitable to\n",
+    "all developers, especially for those who work on web application servers or develop the\n",
+    "GUI. But for purposes of calculation, and in particular for the analysis and visualization\n",
+    "of data, the scripting layer is best. This layer consists of an interface called pyplot."
+   ]
   },
   {
    "cell_type": "markdown",
