--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -277,22 +277,72 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### pylab and pyplot"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In general there is talk of pylab and pyplot. But what is the difference between these\n",
+    "two packages? Pylab is a module that is installed along with matplotlib, while pyplot\n",
+    "is an internal module of matplotlib. Often you will find references to one or the other\n",
+    "approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylab import *\n",
+    "#and\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Pylab combines the functionality of pyplot with the capabilities of NumPy in a single\n",
+    "namespace, and therefore you do not need to import NumPy separately. Furthermore,\n",
+    "if you import pylab, pyplot and NumPy functions can be called directly without any\n",
+    "reference to a module (namespace), making the environment more similar to MATLAB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(x,y)\n",
+    "array([1,2,3,4])\n",
+    "# Instead of\n",
+    "plt.plot()\n",
+    "np.array([1,2,3,4]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The pyplot package provides the classic Python interface for programming the\n",
+    "matplotlib library, has its own namespace, and requires the import of the NumPy\n",
+    "package separately. This approach is the one chosen for this book; it is the main topic of\n",
+    "this chapter; and it will be used for the rest of the book. In fact this choice is shared and\n",
+    "approved by most Python developers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "attachments": {},
