--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -27,7 +27,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Depois de discutir nos capítulos anteriores as bibliotecas Python responsáveis pelos dados\n",
+    "processamento, agora é a vez de você conhecer uma biblioteca que cuida da visualização. Esse\n",
+    "biblioteca é matplotlib.\n",
+    "\n",
+    "\n",
+    "A visualização de dados é muitas vezes subestimada na análise de dados, mas na verdade é uma\n",
+    "fator muito importante porque a representação de dados incorreta ou ineficiente pode arruinar um\n",
+    "caso contrário excelente análise. Neste capítulo, você descobrirá os vários aspectos do\n",
+    "biblioteca matplotlib, incluindo como ela é estruturada e como maximizar o potencial que\n",
+    "oferece."
+   ]
   },
   {
    "cell_type": "markdown",
