--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -43,35 +43,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Biblioteca matplotlib"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "matplotlib is a Python library specializing in the development of two-dimensional\n",
-    "charts (including 3D charts). In recent years, it has been widespread in scientific and\n",
-    "engineering circles (http://matplolib.org).\n",
-    "\n",
-    "Among all the features that have made it the most used tool in the graphical\n",
-    "representation of data, there are a few that stand out:\n",
-    "\n",
-    "• Extreme simplicity in its use\n",
-    "• Gradual development and interactive data visualization\n",
-    "• Expressions and text in LaTeX\n",
-    "• Greater control over graphic elements\n",
-    "• Export to many formats, such as PNG, PDF, SVG, and EPS\n",
-    "\n",
-    "matplotlib is designed to reproduce as much as possible an environment similar to\n",
-    "MATLAB in terms of both graphical view and syntactic form. This approach has proved\n",
-    "successful, as it has been able to exploit the experience of software (MATLAB) that has\n",
-    "been on the market for several years and is now widespread in all professional technical-scientific\n",
-    "circles. Not only is matplotlib based on a scheme known and quite familiar\n",
-    "to most experts in the field, but also it also exploits those optimizations that over the\n",
-    "years have led to a deducibility and simplicity in its use, which makes this library also\n",
-    "an excellent choice for those approaching data visualization for the first time, especially\n",
-    "those without any experience with applications such as MATLAB or similar."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
