--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -50,20 +50,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "matplotlib é uma biblioteca Python especializada no desenvolvimento de gráficos bidimensionais\n",
+    "gráficos (incluindo gráficos 3D). Nos últimos anos, tem sido difundido no meio científico e\n",
+    "círculos de engenharia (http://matplolib.org).\n",
+    "\n",
+    "Entre todas as características que a tornaram a ferramenta mais utilizada na área gráfica\n",
+    "representação de dados, há alguns que se destacam:\n",
+    "\n",
+    "• Extrema simplicidade na sua utilização\n",
+    "• Desenvolvimento gradual e visualização interativa de dados\n",
+    "• Expressões e texto em LaTeX\n",
+    "• Maior controle sobre os elementos gráficos\n",
+    "• Exporte para vários formatos, como PNG, PDF, SVG e EPS\n",
+    "\n",
+    "matplotlib é projetado para reproduzir tanto quanto possível um ambiente semelhante ao\n",
+    "MATLAB em termos de visualização gráfica e forma sintática. Esta abordagem provou\n",
+    "bem-sucedido, pois soube explorar a experiência do software (MATLAB) que\n",
+    "está no mercado há vários anos e hoje é difundido em todos os profissionais técnico-científicos\n",
+    "círculos. O matplotlib não é apenas baseado em um esquema conhecido e bastante familiar\n",
+    "para a maioria dos especialistas na área, mas também explora as otimizações que ao longo do\n",
+    "anos levaram a uma dedutibilidade e simplicidade na sua utilização, o que torna esta biblioteca também\n",
+    "uma excelente escolha para aqueles que abordam a visualização de dados pela primeira vez, especialmente\n",
+    "aqueles sem nenhuma experiência com aplicativos como MATLAB ou similares."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In addition to simplicity and deducibility, the matplotlib library inherited\n",
-    "interactivity from MATLAB as well. That is, the analyst can insert command after\n",
-    "command to control the gradual development of a graphical representation of data.\n",
-    "This mode is well suited to the more interactive approaches of Python as the IPython\n",
-    "QtConsole and IPython Notebook (see Chapter 2), thus providing an environment\n",
-    "for data analysis that has little to envy from other tools such as Mathematica, IDL, or\n",
-    "MATLAB."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
