--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -78,7 +78,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Além da simplicidade e dedutibilidade, a biblioteca matplotlib herdou\n",
+    "interatividade do MATLAB também. Ou seja, o analista pode inserir comando após\n",
+    "comando para controlar o desenvolvimento gradual de uma representação gráfica de dados.\n",
+    "Este modo é adequado para as abordagens mais interativas do Python como o IPython\n",
+    "QtConsole e IPython Notebook (consulte o Capítulo 2), fornecendo assim um ambiente\n",
+    "para análise de dados que tem pouco a invejar de outras ferramentas como Mathematica, IDL ou\n",
+    "MATLAB."
+   ]
   },
   {
    "cell_type": "markdown",
