--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -91,21 +91,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A genialidade de quem desenvolveu esta bela biblioteca foi usar e incorporar\n",
+    "as coisas boas atualmente disponíveis e em uso na ciência. Isso não é apenas limitado, como nós\n",
+    "vimos, ao modo de operação do MATLAB e similares, mas também aos modelos de\n",
+    "formatação de expressões científicas e símbolos representados pelo LaTeX. Por causa de sua\n",
+    "grande capacidade de exibição e apresentação de expressões científicas, o LaTeX tem sido um\n",
+    "elemento insubstituível em qualquer publicação ou documentação científica, onde a necessidade de\n",
+    "representar visualmente expressões como integrais, somatórios e derivadas é obrigatório.\n",
+    "Portanto matplotlib integra este notável instrumento para melhorar a\n",
+    "capacidade representativa das cartas."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In addition, you must not forget that matplotlib is not a separate application but\n",
-    "a library of a programming language like Python. So it also takes full advantage of the\n",
-    "potential that programming languages offer. matplotlib looks like a graphics library\n",
-    "that allows you to programmatically manage the graphic elements that make up a chart\n",
-    "so that the graphical display can be controlled in its entirety. The ability to program\n",
-    "the graphical representation allows management of the reproducibility of the data\n",
-    "representation across multiple environments and especially when you make changes or\n",
-    "when the data is updated."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
