--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -106,7 +106,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Além disso, você não deve esquecer que o matplotlib não é um aplicativo separado, mas\n",
+    "uma biblioteca de uma linguagem de programação como Python. Portanto, também aproveita ao máximo o\n",
+    "potencial que as linguagens de programação oferecem. matplotlib parece uma biblioteca de gráficos\n",
+    "que permite gerenciar programaticamente os elementos gráficos que compõem um gráfico\n",
+    "para que a exibição gráfica possa ser controlada em sua totalidade. A capacidade de programar\n",
+    "a representação gráfica permite o gerenciamento da reprodutibilidade dos dados\n",
+    "representação em vários ambientes e especialmente quando você faz alterações ou\n",
+    "quando os dados são atualizados."
+   ]
   },
   {
    "cell_type": "markdown",
