--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -120,16 +120,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Além disso, como matplotlib é uma biblioteca Python, ela permite que você explore todo o\n",
+    "potencial de outras bibliotecas disponíveis para qualquer desenvolvedor que implemente com esta\n",
+    "linguagem. De fato, no que diz respeito à análise de dados, o matplotlib normalmente coopera com um conjunto\n",
+    "de outras bibliotecas como NumPy e pandas, mas muitas outras bibliotecas podem ser integradas\n",
+    "sem qualquer problema."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Finally, graphical representations obtained through encoding with this library can be\n",
-    "exported in the most common graphic formats (such as PNG and SVG) and then be used\n",
-    "in other applications, documentation, web pages, etc."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
