--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -131,14 +131,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Finalmente, as representações gráficas obtidas através da codificação com esta biblioteca podem ser\n",
+    "exportados nos formatos gráficos mais comuns (como PNG e SVG) e depois usados\n",
+    "em outras aplicações, documentação, páginas web, etc."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### The matplotlib Architecture"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
