--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -140,20 +140,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### A arquitetura matplotlib"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "One of the key tasks that matplotlib must take on is provide a set of functions and tools\n",
-    "that allow representation and manipulation of a Figure (the main object), along with\n",
-    "all internal objects of which it is composed. However, matplotlib not only deals with\n",
-    "graphics but also provides all the tools for the event handling and the ability to animate\n",
-    "graphics. So, thanks to these additional features, matplotlib proves to be capable of\n",
-    "producing interactive charts based on the events triggered by pressing a key on the\n",
-    "keyboard or on mouse movement."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
