--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -147,17 +147,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Uma das principais tarefas que o matplotlib deve assumir é fornecer um conjunto de funções e ferramentas\n",
+    "que permitem a representação e manipulação de uma Figura (o objeto principal), juntamente com\n",
+    "todos os objetos internos de que é composto. No entanto, matplotlib não apenas lida com\n",
+    "gráficos, mas também fornece todas as ferramentas para o tratamento de eventos e a capacidade de animar\n",
+    "gráficos. Portanto, graças a esses recursos adicionais, o matplotlib prova ser capaz de\n",
+    "produzindo gráficos interativos com base nos eventos acionados pressionando uma tecla no\n",
+    "teclado ou no movimento do mouse."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "The architecture of matplotlib is logically structured into three layers, which are\n",
-    "placed at three different levels (see Figure 7-2). The communication is unidirectional,\n",
-    "that is, each layer can communicate with the underlying layer, while the lower layers\n",
-    "cannot communicate with the top ones."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
