--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -160,18 +160,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A arquitetura do matplotlib é estruturada logicamente em três camadas, que são\n",
+    "colocados em três níveis diferentes (consulte a Figura 7-2). A comunicação é unidirecional,\n",
+    "ou seja, cada camada pode se comunicar com a camada subjacente, enquanto as camadas inferiores\n",
+    "não pode se comunicar com os superiores."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Figure 7-2. The three layers of the matplotlib architecture\n",
-    "The three layers are as follows:\n",
-    "• Scripting\n",
-    "• Artist\n",
-    "• Backend"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
