--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -170,7 +170,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As três camadas da arquitetura matplotlib\n",
+    "As três camadas são as seguintes:\n",
+    "• Scripts\n",
+    "• Artista\n",
+    "• Processo interno"
+   ]
   },
   {
    "cell_type": "markdown",
