--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -181,22 +181,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Camada de back-end"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In the diagram of the matplotlib architecture, the layer that works at the lowest level is\n",
-    "the Backend layer. This layer contains the matplotlib APIs, a set of classes that play the\n",
-    "role of implementation of the graphic elements at a low level.\n",
-    "\n",
-    "• FigureCanvas is the object that embodies the concept of\n",
-    "drawing area.\n",
-    "• Renderer is the object that draws on FigureCanvas.\n",
-    "• Event is the object that handles user inputs (keyboard and\n",
-    "mouse events)."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
